--- a/pom.xml
+++ b/pom.xml
@@ -32,5 +32,12 @@
             <artifactId>commons-collections4</artifactId>
             <version>4.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/postgresql/postgresql -->
+        <dependency>
+            <groupId>postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>9.1-901-1.jdbc4</version>
+        </dependency>
     </dependencies>
 </project>
